--- a/src/main/resources/templates/manage_borrowed.html
+++ b/src/main/resources/templates/manage_borrowed.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<!--/*@thymesVar id="usersList" type="java.util.List"*/-->
+<!--/*@thymesVar id="borrowed" type="java.util.List"*/-->
 <!--/*@thymesVar id="currentUser" type="com.wiokru.library.entity.User"*/-->
 
 
@@ -45,14 +45,14 @@
 
         <div class="wrap-login300 p-l-50 p-r-50 p-t-55 p-b-30">
             <span class="login100-form-title p-b-20">
-                Manage Users
+                Borrowed Books
             </span>
 
             <div class="container-login100-form-btn p-t-25">
                 <form class="login100-form validate-form" th:method="POST">
                     <div class="search-input-container">
                         <div class="wrap-input100 m-b-16">
-                            <input class="input100" type="text" th:name="search_text" placeholder="Search for users...">
+                            <input class="input100" type="text" th:name="search_text" placeholder="Search for reservation...">
                             <span class="focus-input100"></span>
                             <span class="symbol-input100">
                         <span class="lnr lnr-magnifier"></span>
@@ -67,42 +67,41 @@
                 </form>
             </div>
 
-            <div th:if="${!usersList.isEmpty()}">
-                <table class="table table-striped">
+            <div th:if="${!borrowedList.isEmpty()}">
+                <table class="table table-striped table-primary">
                     <thead class="ttop">
                     <tr class="table-info100">
                         <td> Id</td>
-                        <td> Email</td>
-                        <td> Name</td>
-                        <td> Surname</td>
-                        <td> City</td>
-                        <td> Phone</td>
-                        <td> Roles</td>
-                        <td> Actions</td>
+                        <td> Book Id</td>
+                        <td> Book Title</td>
+                        <td> Book Authors</td>
+                        <td> User Email</td>
+                        <td> User</td>
+                        <td> Borrowed Due Date</td>
+                        <td> Return </td>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="user :${usersList}">
-                        <td th:text="${user.getId()}" ></td>
-                        <td th:text="${user.getEmail()}" ></td>
-                        <td th:text="${user.getName()}" ></td>
-                        <td th:text="${user.getSurname()}" ></td>
-                        <td th:text="${user.getCity()}" ></td>
-                        <td th:text="${user.getPhone()}" ></td>
-                        <td th:text="${user.listRoles()}" ></td>
+                    <tr th:each="borrowed :${borrowedList}">
+                        <td th:text="${borrowed.getId()}" ></td>
+                        <td th:text="${borrowed.getBook().getId()}" ></td>
+                        <td th:text="${borrowed.getBook().getTitle()}" ></td>
+                        <td th:text="${borrowed.getBook().listAuthors()}" ></td>
+                        <td th:text="${borrowed.getUser().getEmail()}" ></td>
+                        <td th:text="${borrowed.getUser().getName() + ' ' + borrowed.getUser().getSurname()}" ></td>
+                        <td th:text="${borrowed.displayDueDate()}" ></td>
                         <td>
                             <div class="symbol-links100">
-                                <a th:href="@{/user/{id}/manage_users/delete/{user_id}(id = ${currentUser.getId()}, user_id = ${user.getId()})}"><span class="icon-lnr-100 lnr lnr-trash"></span></a>
-                                <a th:href="@{/user/{id}/manage_users/edit/{user_id}(id = ${currentUser.getId()}, user_id = ${user.getId()})}"><span class="icon-lnr-100 lnr lnr-pencil"></span></a>
+                                <a th:href="@{/user/{id}/manage_books/borrowed/return/{borrowed_id}(id = ${currentUser.getId()}, borrowed_id = ${borrowed.getId()})}"><span class="icon-lnr-100-green lnr lnr-enter"></span></a>
                             </div>
                         </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
-            <div th:if="${usersList.isEmpty()}">
+            <div th:if="${borrowedList.isEmpty()}">
                 <label class="login100-form-label p-b-35 p-l-2 p-r-2">
-                    Ups, we did't find any users...
+                    Ups, we did't find any borrowed books yet...
                 </label>
             </div>
         </div>
