--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -54,7 +54,7 @@
 
 #manage_users_admin {
     top: 420px;
-    background-color: #7300b6 /* Purple */
+    background-color: #ffa500 /* orange */
 }
 
 .icon {
