--- a/src/main/resources/templates/manage_books.html
+++ b/src/main/resources/templates/manage_books.html
@@ -62,6 +62,14 @@
                         ADD NEW AUTHOR
                     </a>
                 </div>
+
+                <div class="search-button-container">
+                    <a class="login100-form-btn"
+                       th:href="@{/user/{id}/manage_books/add_category(id = ${currentUser.getId()})}">
+                        ADD NEW CATEGORY
+                    </a>
+                </div>
+
                 <div class="search-button-container">
                     <a class="login100-form-btn"
                        th:href="@{/user/{id}/manage_books/reservations(id = ${currentUser.getId()})}">
