--- a/src/main/resources/templates/book_edit_form.html
+++ b/src/main/resources/templates/book_edit_form.html
@@ -108,7 +108,7 @@
                         </button>
                     </div>
                     <div class="button-wrap-container">
-                        <a th:href="@{/user/{id}/my_posts(id = ${currentUser.getId()})}" class="login100-form-btn">
+                        <a th:href="@{/user/{id}/manage_books(id = ${currentUser.getId()})}" class="login100-form-btn">
                             Cancel
                         </a>
                     </div>
